@@ -74,7 +74,6 @@ public final class ServerList extends WrapperList<Server> {
     public Server add(Protocol protocol) {
         final Server result = new Server(protocol, null, protocol
                 .getDefaultPort(), getTarget());
-        result.setContext(getContext().createChildContext());
         add(result);
         return result;
     }
@@ -91,7 +90,6 @@ public final class ServerList extends WrapperList<Server> {
      */
     public Server add(Protocol protocol, int port) {
         final Server result = new Server(protocol, null, port, getTarget());
-        result.setContext(getContext().createChildContext());
         add(result);
         return result;
     }
@@ -111,7 +109,6 @@ public final class ServerList extends WrapperList<Server> {
      */
     public Server add(Protocol protocol, String address, int port) {
         final Server result = new Server(protocol, address, port, getTarget());
-        result.setContext(getContext().createChildContext());
         add(result);
         return result;
     }
